--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
       <!-- Request -->
       <div class="request">
         <div class="request__container">
+          <div data-closerequestform class="request__close">&times;</div>
           <div class="request__title">
             Оставьте заявку и мы расчитаем стоимость <br />
             изделия в кратчайшие сроки
